# BlackHoleSim

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_flags.txt
src/: LightRay.cpp  LightRay.h  Raymarch.h  Raymarch.hpp  Schwarzchild.cpp  Schwarzchild.h  config.h  config.hpp  constants.hpp  main.cpp  myGLFW.cpp  myGLFW.h  myGLFW.hpp  myRender.cpp  myRender.hpp  particles.hpp
src/shaders/: bloom_composite.glsl  bright_extract.glsl  fps_text_fragment.glsl  fps_text_vertex.glsl  fragment.glsl  gaussian_blur.glsl  ray_fragment.glsl  ray_vertex.glsl  vertex.glsl
